cmake_minimum_required(VERSION 3.22)
project(cpp_learn)
set(CMAKE_CXX_STANDARD 11)
add_executable(const_learn variable/const_learn.cpp variable)
add_executable(nameing_rules variable/nameing_rules.cpp)
add_executable(calculate io/calculate.cpp)
add_executable(input2 io/input2.cpp)
add_executable(increase_decrease io/increase_decrease.cpp)
add_executable(assignment_operators "io/assignment_ operators.cpp")
add_executable(variable_initial io/variable_initial.cpp)