cmake_minimum_required(VERSION 3.22)
project(cpp_learn)
set(CMAKE_CXX_STANDARD 11)
add_executable(const_learn variable/const_learn.cpp variable)
add_executable(nameing_rules variable/nameing_rules.cpp)
add_executable(calculate io/calculate.cpp)
add_executable(input2 io/input2.cpp)
add_executable(increase_decrease io/increase_decrease.cpp)
add_executable(assignment_operators "io/assignment_ operators.cpp")
add_executable(variable_initial io/variable_initial.cpp)
add_executable(function_declare function/function_declare.cpp)
add_executable(variable_scope function/variable_scope.cpp)
add_executable(start function/headers_cpp/source/start.cpp function/headers_cpp/source/boys.cpp function/headers_cpp/source/girls.cpp)
add_executable(sizeofLearn function/sizeofLearn.cpp)
add_executable(floatsize function/floatsize.cpp)
add_executable(charDemo function/charDemo.cpp)
add_executable(string_learn function/string_learn.cpp)
add_executable(booleanlearn function/booleanlearn.cpp)
add_executable(pointer pointer/pointer.cpp)
add_executable(pointerUnref pointer/pointerUnref.cpp)
add_executable(pointerParameter pointer/pointerParameter.cpp)
add_executable(constPointer pointer/constPointer.cpp)
add_executable(voidLearn pointer/voidLearn.cpp)
add_executable(memory_malloc pointer/memory_malloc.cpp)
add_executable(secondaryPointer pointer/secondaryPointer.cpp)
add_executable(secondaryPointer2 pointer/secondaryPointer2.cpp)
add_executable(nullPointer pointer/nullPointer.cpp)
add_executable(nullPointer2 pointer/nullPointer2.cpp)
add_executable(wildPointer pointer/wildPointer.cpp)
add_executable(functionPointer pointer/functionPointer.cpp)
add_executable(functionPointeApply pointer/functionPointeApply.cpp)
add_executable(arraydemo array/arraydemo.cpp)
add_executable(test array/arraryIsPointer.cpp)
add_executable(arrauOUt array/arrauOUt.cpp)
add_executable(arrayParameter array/arrayParameter.cpp)
add_executable(arrayParameter2 array/arrayParameter2.cpp)
add_executable(newArray array/newArray.cpp)
add_executable(newArray2 array/newArray2.cpp)
add_executable(qsort array/qsort.cpp)
add_executable(cstyleString cstyleString/cstyleString.cpp)
add_executable(stringclear cstyleString/stringclear.cpp)
add_executable(stringcopy cstyleString/stringcopy.cpp)
add_executable(srtuct struct/srtuct.cpp)
add_executable(cstyleStringDemo string/cstyleStringDemo.cpp)
add_executable(structpointer struct/structpointer.cpp)